# fastapi-microservice

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  makefile  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yaml  ci.yml
docs/: openapi.json
docs/superpowers/plans/: 2026-03-24-go-microservice.md  2026-05-05-fastapi-microservice-migration.md
docs/superpowers/specs/: 2026-03-24-go-microservice-design.md  2026-05-05-fastapi-microservice-migration-design.md
infra/: .dockerignore  .env-example  .env.example  Dockerfile  Dockerfile.dockerignore  docker-compose.local.yml  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf
infra/commands/: api.sh  bucket.sh  entrypoint.sh  migrate.sh
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  complex.py  health.py  users.py  ws.py
src/api/dependencies/: __init__.py  auth.py  db.py  docs.py  pagination.py  permission.py
src/api/handlers/: exceptions.py
src/api/middlewares/: error_handler.py  request_id.py  security_headers.py  timing.py
src/api/v1/: __init__.py  auth.py  items.py  users.py
src/core/: __init__.py  config.py  database.py  http_client.py  jwt.py  mongo.py  mysql.py  pagination.py  postgres.py  rate_limit.py  redis.py  security.py  settings.py  timezone.py
src/core/observability/: __init__.py  logging.py  metrics.py
src/core/resilience/: __init__.py  circuit_breaker.py  retry.py
src/core/throttle/: __init__.py  limiter.py
src/db/: __init__.py  factory.py
src/db/mongo/: __init__.py  client.py
src/db/mysql/: __init__.py  database.py
src/db/postgres/: __init__.py  database.py  instance.py
src/db/redis/: __init__.py  broker.py
src/db/sqlalchemy/: __init__.py  base.py
src/enums/: __init__.py  lang.py  sorting.py  status.py
src/enums/api/: permissions.py
src/enums/models/: apartment.py
src/exceptions/: __init__.py
src/exceptions/api/: __init__.py  auth.py  base.py  common.py  complex.py  users.py
src/exceptions/integrations/: base.py
src/exceptions/repositories/: base.py
src/exceptions/repository/: __init__.py  base.py  complex.py  users.py
src/exceptions/schema/: __init__.py  base.py
src/exceptions/service/: __init__.py  auth.py  base.py  complex.py  users.py
src/exceptions/services/: auth.py  base.py
src/integrations/: __init__.py  base.py
src/integrations/base/: __init__.py
src/jobs/: lifespan.py
src/managers/: __init__.py  auth.py  base.py  middleware.py  mongo.py  readonly.py  transaction.py  websocket.py
src/managers/db/: base.py  readonly.py  (+1 more)
src/mappers/: __init__.py  base.py  complex.py  items.py  users.py
src/middlewares/: __init__.py  cors.py  error_handler.py  metrics.py  request_id.py  security_headers.py  timing.py
src/migrations/: env.py
src/models/: __init__.py  base.py  items.py  users.py
src/repositories/: __init__.py  base.py  complex.py  items.py  mongo_users.py  users.py
src/schemas/: __init__.py  auth.py  base.py  complex.py  items.py  pagination.py  schemas.py  users.py
src/security/: __init__.py
src/services/: __init__.py  auth.py  base.py  complex.py  items.py  users.py
src/tests/: __init__.py  conftest.py
(+56 files in other folders)
