[project]
name = "fastapi-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "deprecated>=1.3.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "minio>=7.2.18",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pybreaker>=1.4.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
