[project]
name = "fastapi-microservice"
version = "0.1.0"
description = "FastAPI microservice template — postgres + JWT auth + middlewares"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "fastapi-pagination>=0.12.32",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "bcrypt<4.1",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.12",
    "sentry-sdk[fastapi]>=2.18.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "tzdata>=2024.2",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=4.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
